# python-semanticversion

./: .gitignore  .travis.yml  CREDITS  ChangeLog  LICENSE  MANIFEST.in  Makefile  README  README.rst  dev_requirements_django1.5.txt  dev_requirements_django1.7.txt  dev_requirements_django1.8.txt  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: check.yml  test.yml
doc/: Makefile  changelog.rst  conf.py  django.rst  index.rst  make.bat  reference.rst
docs/: conf.py  django.rst  guide.rst  index.rst  reference.rst
semantic_version/: __init__.py  base.py  compat.py  django_fields.py
src/semantic_version/: __init__.py  base.py  compat.py  django_fields.py
tests/: __init__.py  compat.py  setup_django.py  test_base.py  test_django.py  test_match.py  test_npm.py  test_parsing.py  test_spec.py  testing.py
tests/django_test_app/: __init__.py  models.py
