[metadata]
name = semantic_version
version = 2.10.1.dev0
description = A library implementing the 'SemVer' scheme.
long_description = file: README.rst
# https://docutils.sourceforge.io/FAQ.html#what-s-the-official-mime-type-for-restructuredtext-data
long_description_content_type = text/x-rst
author = Raphaël Barrois
author_email = raphael.barrois+semver@polytechnique.org
url = https://github.com/rbarrois/python-semanticversion
keywords = semantic version, versioning, version
license = BSD
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
packages = semantic_version
python_requires = >= 2.7
install_requires =

[options.extras_require]
dev =
    Django>=1.11
    # Runners
    nose2
    tox
    # Quality
    check_manifest
    coverage
    flake8
    # Packaging
    wheel
    zest.releaser[recommended]
    readme_renderer<25.0; python_version == "3.4"
    colorama<=0.4.1; python_version == "3.4"

doc =
    Sphinx
    sphinx_rtd_theme

[bdist_wheel]
universal = 1

[zest.releaser]
; semver-style versions
version-levels = 3

[distutils]
index-servers = pypi

[flake8]
# Ignore "and" at start of line.
ignore = W503
max-line-length = 120
